# cppTemplatesBasics

./: .gitignore  README.md
templates/: CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.4.8-pre1  has_pre_increment_test.cpp  is_iterable_test.cpp  iterate_tuple_constexpr.h  iterate_tuple_fold_expression.h  iterate_tuple_recursive.h  iterate_tuple_recursive_callback.h  iterate_tuple_test.cpp  iterate_tuple_test_upd.cpp  main.cpp  main.ii  main.s
